<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.ict</groupId>
	<artifactId>vita</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>vita</name>
	<description>Team Project</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<!--
			- application.yml파일에 JPA관련 설정을 하지 않고 프로젝트를 실행시 에러
			  (application.yml에 데이터베이스 설정 추가해야 함)
			- JPA 적용시 주석 해제하기	
			- 이 의존성 내부에 jdbc 관련 라이브러리(spring-boot-starter-jdbc)를 포함하고 있음
		-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		
		
		<!-- 유효성 검증용 -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		
		<!-- OAuth2 사용(SNS로그인) 위한 의존성 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>
		
		<!-- WebClient 사용하기 위한 의존성 (HTTP 클라이언트) -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-webflux</artifactId>
		    <version>3.4.3</version>
		</dependency> 
		
		<!-- 파일 업로드용 -->
		<dependency>
		    <groupId>commons-fileupload</groupId>
		    <artifactId>commons-fileupload</artifactId>
		    <version>1.5</version>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		
		<!-- 웹 요청을 처리하기 위한 의존성(REST API 또는 웹 애플리케이션을 만들 때 필수) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- 개발 편의를 위한 모듈로 코드 수정 후 서버 자동 재시작 등의 기능 제공 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		
		<!-- 오라클 -->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc11</artifactId>
			<scope>runtime</scope>
		</dependency>
		
		
		<!-- 포스트그레 -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency> 
		
		<!-- 반복적인 코드를 줄여주는 라이브러리로 
		어노테이션을 이용해 Getter/Setter,생성자 등을 자동으로 생성 -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		
		<!-- Spring Boot에서 테스트를 쉽게 작성할 수 있도록 도와주는 테스트 라이브러리 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!-- SpringDoc API 자동화 문서 (Swagger) -->
		<dependency>
		   <groupId>org.springdoc</groupId>
		   <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
		   <version>2.8.6</version> <!-- 최신 버전 미사용시 스웨거 에러날 수 있음 -->
		</dependency>
		
		<!-- 
			JWT Token 
		-->
		<!-- JWT를 생성, 서명, 검증하는 데 필요한 인터페이스(API)만 제공하는 핵심 라이브러리 -->
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-api</artifactId>
		    <version>0.11.5</version>
		</dependency>
		<!-- jjwt-impl은 jjwt-api에서 제공하는 인터페이스의 실제 구현체(Implementation)를 포함하고 있음. -->
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-impl</artifactId>
		    <version>0.11.5</version>
		    <scope>runtime</scope>
		</dependency>
		<!-- JWT에서 Payload(페이로드)를 JSON 형식으로 변환할 때 필요한 라이브러리. -->
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-jackson</artifactId>
		    <version>0.11.5</version>
		    <scope>runtime</scope>
		</dependency>
		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
